--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -4,21 +4,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="nf-core/viralgenie: A pipeline to reconstruct consensus genomes and identify intrahost variants from metagenomic sequencing data or enriched based sequencing data like hybrid capture.  ">
-  <title>nf-core/viralgenie Pipeline Report</title>
+  <meta name="description" content="nf-core/viralmetagenome: a bioinformatics best-practice analysis pipeline for untargeted viral genome reconstruction and to identify intra-host variants from metagenomic sequencing data.">
+  <title>nf-core/viralmetagenome Pipeline Report</title>
 </head>
 <body>
 <div style="font-family: Helvetica, Arial, sans-serif; padding: 30px; max-width: 800px; margin: 0 auto;">
 
 <img src="cid:nfcorepipelinelogo">
 
-<h1>nf-core/viralgenie ${version}</h1>
+<h1>nf-core/viralmetagenome ${version}</h1>
 <h2>Run Name: $runName</h2>
 
 <% if (!success){
     out << """
     <div style="color: #a94442; background-color: #f2dede; border-color: #ebccd1; padding: 15px; margin-bottom: 20px; border: 1px solid transparent; border-radius: 4px;">
-        <h4 style="margin-top:0; color: inherit;">nf-core/viralgenie execution completed unsuccessfully!</h4>
+        <h4 style="margin-top:0; color: inherit;">nf-core/viralmetagenome execution completed unsuccessfully!</h4>
         <p>The exit status of the task that caused the workflow execution to fail was: <code>$exitStatus</code>.</p>
         <p>The full error message was:</p>
         <pre style="white-space: pre-wrap; overflow: visible; margin-bottom: 0;">${errorReport}</pre>
@@ -27,7 +27,7 @@
 } else {
     out << """
     <div style="color: #3c763d; background-color: #dff0d8; border-color: #d6e9c6; padding: 15px; margin-bottom: 20px; border: 1px solid transparent; border-radius: 4px;">
-        nf-core/viralgenie execution completed successfully!
+        nf-core/viralmetagenome execution completed successfully!
     </div>
     """
 }
@@ -44,8 +44,8 @@
     </tbody>
 </table>
 
-<p>nf-core/viralgenie</p>
-<p><a href="https://github.com/nf-core/viralgenie">https://github.com/nf-core/viralgenie</a></p>
+<p>nf-core/viralmetagenome</p>
+<p><a href="https://github.com/nf-core/viralmetagenome">https://github.com/nf-core/viralmetagenome</a></p>
 
 </div>
 
